@@ -89,7 +89,7 @@ class SiteStatsUpdate {
 
 	var $mViews, $mEdits, $mGood, $mPages, $mUsers;
 
-	function SiteStatsUpdate( $views, $edits, $good, $pages = 0, $users = 0 ) {
+	function __construct( $views, $edits, $good, $pages = 0, $users = 0 ) {
 		$this->mViews = $views;
 		$this->mEdits = $edits;
 		$this->mGood = $good;
