@@ -68,7 +68,7 @@ class Title {
 	 * Constructor
 	 * @private
 	 */
-	/* private */ function Title() {
+	/* private */ function __construct() {
 		$this->mInterwiki = $this->mUrlform =
 		$this->mTextform = $this->mDbkeyform = '';
 		$this->mArticleID = -1;
